added Java options