@@ -12,7 +12,8 @@ pipeline {
         // Update PATH to include the new JAVA_HOME/bin
         PATH = "${env.JAVA_HOME}/bin:${env.PATH}"
         SOLR_VERSION = '10.0.0'
-        SOLR_OPTS = "${env.SOLR_OPTS} -Djava.locale.providers=COMPAT,CLDR,SPI"
+        // SOLR_OPTS = "${env.SOLR_OPTS} -Djava.locale.providers=COMPAT,CLDR,SPI"
+        JAVA_TOOL_OPTIONS = '-Djava.locale.providers=COMPAT,CLDR,SPI --add-opens=java.base/java.lang=ALL-UNNAMED'
     }
 
     stages {
